--- a/app/src/main/assets/web/about.html
+++ b/app/src/main/assets/web/about.html
@@ -1,20 +1,49 @@
-<html lang="en">
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style>
+        .container {
+            display: flex;
+            justify-content: center;
+        }
+        .card-container {
+            background-color: rgb(117, 200, 233);
+            width: 90vw;
+            height: fit-content;
+            border-radius: 1rem;
+            padding: .2rem;
+            box-shadow: 0rem .1rem .5rem .03rem rgba(0, 0, 10, 1);
+        }
+        h1 {
+            margin: .3rem;
+            text-align: center;
+        }
+        p {
+            margin: .4rem;
+        }
+    </style>
 </head>
 <body>
-<h1>YOOOOOOOOOOOOOOOOOOOOOOO</h1>
-<article>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, veniam, voluptatum dolorem eaque modi dignissimos natus quo repellat culpa corrupti minus numquam illo expedita reiciendis tempora quibusdam eligendi corporis excepturi?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus atque culpa nesciunt praesentium, similique consectetur deserunt magnam et laudantium quis saepe aut temporibus officiis, inventore eum animi dolore, sapiente eius.
-    </p>
-</article>
+<div class="container">
+    <div class="card-container">
+        <h1>MÅLGRUPP</h1>
+        <p>
+            Appen har fokus på katter och har ett fokus på kattägare och mer generellt kattälskare.
+        </p>
+        <p>
+            I artiklar av <a href="https://timesofindia.indiatimes.com/life-style/relationships/pets/dog-person-vs-cat-person-unique-personality-traits/photostory/98340329.cms?from=mdr">Times of India</a> och <a href="https://www.petplan.co.uk/pet-information/cat/advice/cat-lover-personality-traits/">Petplan</a> så har de hittat
+            gemesamma personlighets-aspekter mellan olika kattägare. Från vad de kom fram till så är
+            kattägare generellt mer introverta, lågmälda, mindre energiska, m.m. Hur mycker det gäller för olika
+            personer kommer såklart att variera.
+        </p>
+        <p>
+            Från de resultaten så kan det antas att den genomsnittliga användaren är mer lågmäld och
+            föredrar ifall appen inte är superfärgglad.
+        </p>
+    </div>
+</div>
 </body>
 </html>
