about förmodligen klar

--- a/app/src/main/assets/web/about.html
+++ b/app/src/main/assets/web/about.html
@@ -41,7 +41,8 @@
         </p>
         <p>
             Från de resultaten så kan det antas att den genomsnittliga användaren är mer lågmäld och
-            föredrar ifall appen inte är superfärgglad.
+            föredrar ifall appen anväder färger som inte står ut speciellt mycket och använder en mer
+            minimal design.
         </p>
     </div>
 </div>
